--- a/main.html
+++ b/main.html
@@ -8,8 +8,34 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Kashmir</h1>
+	<br>			   
+	<p>
+        One of the most apparent reasons why Kashmir is considered to
+		be 'Heaven on earth' is due to the breathtaking landscapes 
+		that it offers the tourists. People from all around the world
+		travel to this beautiful paradise to witness the gushing waters,
+		lush green meadows, and the astoundingly high mountain ranges.
+	</p>
+
+	<ol >
+		<li><b><i>Betaab valley</i></b></li>
+		<li><b><i>Pahalgam</i></b></li>
+		<li><b><i>Dal Lake</i></b></li>
+		<li><b><i>Mughal gardens</i></b></li>
+		<li><b><i>Dhoothpathri</i></b></li>
+	</ol>
+	<ul>
+		<li><b><i>Rogan Josh</i></b></li>
+		<li><b><i>Kashmiri Rajma</i></b></li>
+		<li><b><i>Goshtaba</i></b></li>
+		<li><b><i>Kalaadi Kulcha</i></b></li>
+		<li><b><i>Dumaaloo</i></b></li>
+		
+	</ul>
+	
     <script type="text/javascript" src="./script.js">
-</script>
+    </script>
 
 </body>
 
